--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,10 +6,14 @@
 
 // Colors
 $red-color:           #FF3636 !default;
+$indian-red-color:    #C86464 !default;
 $red-color-dark:      #B71C1C !default;
 $orange-color:        #F29105 !default;
 $blue-color:          #0076df !default;
+$dodger-blue-color:   #1E90FF !default;
+$blue-color-light:    #4BA6FF !default;
 $blue-color-dark:     #00369f !default;
+$curious-blue-color:  #3C85CC !default;
 $cyan-color:          #2698BA !default;
 $light-cyan-color:    lighten($cyan-color, 25%);
 $green-color:         #00ab37 !default;
