--- a/_includes/header.html
+++ b/_includes/header.html
@@ -79,7 +79,7 @@
               
               <!-- CV Manually added here by Eaman -->
               <li class="nav-item">
-                <a class="nav-link" href="{{ '/assets/pdf/CV.pdf'  | relative_url }}">
+                <a class="nav-link" href="{{ '/assets/pdf/CV.pdf'  | relative_url }}" target="_blank">
                   cv
                 </a>
               </li>
