--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
 
               <!-- About -->
               <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/' | relative_url }}">about
+                <a class="nav-link" href="{{ '/' | relative_url }}">About
                   {%- if page.title == "about" -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
@@ -80,7 +80,7 @@
               <!-- CV Manually added here by Eaman -->
               <li class="nav-item">
                 <a class="nav-link" href="{{ '/assets/pdf/CV.pdf'  | relative_url }}" target="_blank">
-                  cv
+                  CV
                 </a>
               </li>
               
